--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,9 +19,9 @@ spring:
     datasource:
         dbcp2:
             driver-class-name: com.mysql.cj.jdbc.Driver
-        password: Relaxism^*^BBU5980
-        url: jdbc:mysql://127.0.0.1:3306/
-        username: LotteON
+        password: Lotte1013!!
+        url: jdbc:mysql://3.39.191.39:3306/Kmarket
+        username: LotteOn01
 
     devtools:
         livereload:
