product list 하는중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ logging:
         root: info
 server:
     servlet:
-        context-path: /
+        context-path: /LotteOn
 spring:
     datasource:
         dbcp2:
@@ -45,7 +45,7 @@ spring:
             password: 1234
     thymeleaf:
         cache: false
-        prefix: file:src/main/resources/templates/
+        prefix: classpath:/templates
     servlet:
         multipart:
             location: src/main/resources/static/file
