--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,6 @@ spring:
         multipart:
             location: src/main/resources/static/file
             max-file-size: 10MB
+# mybatis 설정
+mybatis:
+    mapper-locations: classpath:mappers/*.xml
