--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,4 +52,4 @@ spring:
             max-file-size: 10MB
 # mybatis 설정
 mybatis:
-    mapper-locations: classpath:mappers/*.xml
+    mapper-locations: classpath:mappers/**/*.xml
